syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/fiss/fiss_adjustment_medicare_beneficiary_identifier_indicator.proto";
import "rda/v1/fiss/fiss_adjustment_requestor_code.proto";
import "rda/v1/fiss/fiss_audit_trail.proto";
import "rda/v1/fiss/fiss_bill_classification.proto";
import "rda/v1/fiss/fiss_bill_facility_type.proto";
import "rda/v1/fiss/fiss_bill_frequency.proto";
import "rda/v1/fiss/fiss_cancel_adjustment_code.proto";
import "rda/v1/fiss/fiss_claim_status.proto";
import "rda/v1/fiss/fiss_current_location_2.proto";
import "rda/v1/fiss/fiss_diagnosis_code.proto";
import "rda/v1/fiss/fiss_health_insurance_claim_number_or_medicare_beneficiary_identifier.proto";
import "rda/v1/fiss/fiss_payer.proto";
import "rda/v1/fiss/fiss_payers_code.proto";
import "rda/v1/fiss/fiss_physician_flag.proto";
import "rda/v1/fiss/fiss_procedure_code.proto";
import "rda/v1/fiss/fiss_process_new_health_insurance_claim_number_indicator.proto";
import "rda/v1/fiss/fiss_processing_type.proto";
import "rda/v1/fiss/fiss_repository_indicator.proto";
import "rda/v1/fiss/fiss_source_of_admission.proto";

// FISS (Fiscal Intermediary Shared Systems) Claim
message FissClaim {
  // Document Control Number:
  //
  // Identification number for a claim. It provides a reference number for the control and monitoring of
  // specific claims, and differentiates between claims for the same beneficiary.
  string dcn = 1;

  // Health Insurance Claim Number:
  //
  // Identifies the beneficiary number associated with a claim record, as assigned by CMS.
  string hic_no = 2;

  // Current Status:
  //
  // This field identifies the current condition of the claim (paid, reject, deny, etc.) for the record.
  oneof curr_status {
    FissClaimStatus curr_status_enum = 3;
    string curr_status_unrecognized = 36;
  };

  // Current Location 1:
  //
  // This field identifies the type of processing occurring on the claim.
  oneof curr_loc_1 {
    FissProcessingType curr_loc_1_enum = 4 ;
    string curr_loc_1_unrecognized = 37;
  };

  // Current Location 2:
  //
  // The first and second digits represent the driver name. The third and fourth digits allow for more definition with
  // the driver for the location.
  oneof curr_loc_2  {
    FissCurrentLocation2 curr_loc_2_enum = 5;
    string curr_loc_2_unrecognized = 38;
  };

  // Provider State Code
  optional string prov_state_cd = 16;

  // Provider Type Facility Code
  optional string prov_typ_facil_cd = 17;

  // Provider Emergency Indicator
  optional string prov_emer_ind = 18;

  // Provider Department Identification
  optional string prov_dept_id = 19;

  // Medicare Provider ID:
  //
  // The Medicare Provider ID consists of the following:
  //   * Provider State Code
  //   * Provider Type Facility Code
  //   * Provider Emergency Indicator
  //   * Provider Department Identification
  optional string meda_prov_id = 29;

  optional string meda_prov_6 = 41;

  // Total Charge Amount:
  //
  // This amount may not be equal to the sum of all the revenue lines.
  optional string total_charge_amount = 20;

  // Received Date:
  //
  // The date the claim was received by the Intermediary.
  optional string recd_dt_cymd = 21;

  // Current Transaction Date:
  //
  // The last date that the status/location changed or the claim was updated.
  optional string curr_tran_dt_cymd = 22;

  // Admitting Diagnosis Code:
  //
  // Diagnosis code describing the inpatient condition at the time of the admission.
  optional string adm_diag_code = 23;

  // Principle Diagnosis Code:
  //
  // ICD-9-CM code relating to the condition established after study to be chiefly responsible for the treatment
  // identified in the claim.
  optional string principle_diag = 24;

  // National Provider Identifier (NPI) Number:
  //
  // Number as assigned by CMS to identify health plans, providers, and clearinghouses. The NPI, which contains
  // no embedded information about the health care provider it identifies, never changes. It may be deactivated
  // and then reactivated, but it does not expire. Individual providers will be assigned one NPI number and
  // organizations will be assigned one NPI number; however, organizations may define themselves as having subparts
  // and receive multiple NPIs. This field may be used to Cross walk to the Online Survey Certification and Reporting
  // System (OSCAR) number.
  optional string npi_number = 25;

  // Medicare Beneficiary Identifier:
  //
  // Medicare Beneficiary Number assigned by CMS.
  optional string mbi = 26;

  // Federal Tax Number:
  //
  // Number assigned to the provider by the Federal Government for tax reporting purposes, also known as a tax
  // identification number (TIN) or an employer identification number (EIN).
  optional string fed_tax_nb = 27;

  // Practice Location Address 1:
  //
  // This field identifies the first address of the Provider practice hospital location extracted from the
  // Provider Enrollment Chain and Ownership System (PECOS) file.
  optional string prac_loc_addr1 = 30;

  // Practice Location Address 2:
  //
  // This field identifies the second address of the Provider practice hospital location extracted from the
  // Provider Enrollment Chain and Ownership System (PECOS) file.
  optional string prac_loc_addr2 = 31;

  // Practice Location City:
  //
  // This field identifies the city address of the Provider practice hospital location extracted from the
  // Provider Enrollment Chain and Ownership System (PECOS) file.
  optional string prac_loc_city = 32;

  // Practice Location State:
  //
  // This field identifies the state address of the Provider practice hospital location extracted from the
  // Provider Enrollment Chain and Ownership System (PECOS) file.
  optional string prac_loc_state = 33;

  // Practice Location Zip:
  //
  // This field identifies the zip code address of the Provider practice hospital location extracted from the
  // Provider Enrollment Chain and Ownership System (PECOS) file.
  optional string prac_loc_zip = 34;

  optional string stmt_cov_from_cymd = 39;

  optional string stmt_cov_to_cymd = 40;

  // Location of Bill
  oneof lob_cd {
    FissBillFacilityType lob_cd_enum = 42;
    string lob_cd_unrecognized = 43;
  };

  // Bill Classification
  oneof serv_typ_cd {
    FissBillClassification serv_type_cd_enum = 44;
    FissBillClassificationForClinics serv_type_cd_for_clinics_enum = 45;
    FissBillClassificationForSpecialFacilities serv_type_cd_for_special_facilities_enum = 46;
    string serv_typ_cd_unrecognized = 47;
  };

  // Bill Frequency
  oneof freq_cd {
    FissBillFrequency freq_cd_enum = 48;
    string freq_cd_unrecognized = 49;
  };

  // 3-digit Bill Type Code (concatenation of location of bill, bill classification, and bill frequency).
  optional string bill_typ_cd = 50;

  // Reject Code
  optional string reject_cd = 53;

  // Fully or Partially Denied Indicator
  optional string full_part_den_ind = 54;

  // Non-Pay Code Indicator
  optional string non_pay_ind = 55;

  // Cross-reference Document Control Number
  optional string xref_dcn_nbr = 56;

  // Adjustment Requestor Identification
  oneof adj_req_cd {
    FissAdjustmentRequestorCode adj_req_cd_enum = 57;
    string adj_req_cd_unrecognized = 58;
  };

  // Adjustment Reason Code
  optional string adj_reas_cd = 59;

  // Cancel Cross-reference Document Control Number
  optional string cancel_xref_dcn = 60;

  // Cancel Date
  optional string cancel_date_cymd = 61;

  // Cancel Adjustment Code
  oneof canc_adj_cd {
    FissCancelAdjustmentCode canc_adj_cd_enum = 62;
    string canc_adj_cd_unrecognized = 63;
  };

  // Original Cross-Reference Document Control Number
  optional string original_xref_dcn = 64;

  // Paid Date
  optional string paid_dt_cymd = 65;

  // Admission Date
  optional string adm_date_cymd = 66;

  // Source of Admission
  oneof adm_source {
    FissSourceOfAdmission adm_source_enum = 67;
    string adm_source_unrecognized = 68;
  };

  // Primary Payer Code
  oneof primary_payer_code {
    FissPayersCode primary_payer_code_enum = 69;
    string primary_payer_code_unrecognized = 70;
  };

  // Attending Physician NPI
  optional string attend_phys_id = 71;

  // Attending Physician Last Name
  optional string attend_phys_lname = 72;

  // Attending Physician First Name
  optional string attend_phys_fname = 73;

  // Attending Physician Middle Initial
  optional string attend_phys_mint = 74;

  // Attending Physician Flag
  oneof attend_phys_flag {
    FissPhysicianFlag attend_phys_flag_enum = 75;
    string attend_phys_flag_unrecognized = 76;
  };

  // Operating Physician NPI
  optional string operating_phys_id = 77;

  // Operating Physician Last Name
  optional string oper_phys_lname = 78;

  // Operating Physician First Name
  optional string oper_phys_fname = 79;

  // Operating Physician Middle Initial
  optional string oper_phys_mint = 80;

  // Operating Physician Flag
  oneof oper_phys_flag {
    FissPhysicianFlag oper_phys_flag_enum = 81;
    string oper_phys_flag_unrecognized = 82;
  };

  // Other Physician NPI
  optional string oth_phys_id = 83;

  // Other Physician Last Name
  optional string oth_phys_lname = 84;

  // Other Physician First Name
  optional string oth_phys_fname = 85;

  // Other Physician Middle Initial
  optional string oth_phys_mint = 86;

  // Other Physician Flag
  oneof oth_phys_flag {
    FissPhysicianFlag oth_phys_flag_enum = 87;
    string oth_phys_flag_unrecognized = 88;
  };

  // Cross-Reference Health Insurance Claim Number
  optional string xref_hic_nbr = 89;

  // Process new Health Insurance Claim Number
  oneof proc_new_hic_ind {
    FissProcessNewHealthInsuranceClaimNumberIndicator proc_new_hic_ind_enum = 90;
    string proc_new_hic_ind_unrecognized = 91;
  };

  // New Health Insurance Claim Number
  optional string new_hic = 92;

  // Repository Indicator
  oneof repos_ind {
    FissRepositoryIndicator repos_ind_enum = 93;
    string repos_ind_unrecognized = 94;
  };

  // Repository HIC
  optional string repos_hic = 95;

  // Health Insurance Claim (HIC) Number or Medicare Beneficiary Identify (MBI)
  oneof mbi_subm_bene_ind {
    FissHealthInsuranceClaimNumberOrMedicareBeneficiaryIdentifier mbi_subm_bene_ind_enum = 96;
    string mbi_subm_bene_ind_unrecognized = 97;
  };

  // Adjustment Medicare Beneficiary Identifier (MBI) Indicator
  oneof adj_mbi_ind {
    FissAdjustmentMedicareBeneficiaryIdentifierIndicator adj_mbi_ind_enum = 98;
    string adj_mbi_ind_unrecognized = 99;
  };

  // Adjustment Medicare Beneficiary Identifier
  optional string adj_mbi = 100;

  // Medical Record Number
  optional string medical_record_no = 101;

  // FISS Procedure Codes
  repeated FissProcedureCode fiss_proc_codes = 28;

  // FISS Diagnosis Codes
  repeated FissDiagnosisCode fiss_diag_codes = 35;

  // FISS Payers
  repeated FissPayer fiss_payers = 51;

  // FISS Audit Trail
  repeated FissAuditTrail fiss_audit_trail = 52;
}
