syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

enum FissCurrentLocation2 {
  CURRENT_LOCATION_2_PREPROCESSING = 0    [(string_value) = "0100"];

  CURRENT_LOCATION_2_UNMATCHED = 1        [(string_value) = "01LC"];

  CURRENT_LOCATION_2_CABLE = 2            [(string_value) = "9000"];

  CURRENT_LOCATION_2_CABLED = 3           [(string_value) = "9900"];

  CURRENT_LOCATION_2_FLOOR = 4            [(string_value) = "9996"];

  CURRENT_LOCATION_2_FINAL = 5            [(string_value) = "9997"];

  CURRENT_LOCATION_2_OFFLINE = 6          [(string_value) = "9998"];

  CURRENT_LOCATION_2_CROSS_WALK_DOWN = 7  [(string_value) = "019M"];

  CURRENT_LOCATION_2_POST_PAY_7500 = 8    [(string_value) = "7500"];
  CURRENT_LOCATION_2_POST_PAY_7501 = 9    [(string_value) = "7501"];
  CURRENT_LOCATION_2_POST_PAY_7502 = 10   [(string_value) = "7502"];
  CURRENT_LOCATION_2_POST_PAY_7503 = 11   [(string_value) = "7503"];
  CURRENT_LOCATION_2_POST_PAY_7504 = 12   [(string_value) = "7504"];
  CURRENT_LOCATION_2_POST_PAY_7505 = 13   [(string_value) = "7505"];
  CURRENT_LOCATION_2_POST_PAY_7506 = 14   [(string_value) = "7506"];
  CURRENT_LOCATION_2_POST_PAY_7507 = 15   [(string_value) = "7507"];
  CURRENT_LOCATION_2_POST_PAY_7508 = 16   [(string_value) = "7508"];
  CURRENT_LOCATION_2_POST_PAY_7509 = 17   [(string_value) = "7509"];
  CURRENT_LOCATION_2_POST_PAY_7510 = 18   [(string_value) = "7510"];
  CURRENT_LOCATION_2_POST_PAY_7511 = 19   [(string_value) = "7511"];
  CURRENT_LOCATION_2_POST_PAY_7512 = 20   [(string_value) = "7512"];
  CURRENT_LOCATION_2_POST_PAY_7513 = 21   [(string_value) = "7513"];
  CURRENT_LOCATION_2_POST_PAY_7514 = 22   [(string_value) = "7514"];
  CURRENT_LOCATION_2_POST_PAY_7515 = 23   [(string_value) = "7515"];
  CURRENT_LOCATION_2_POST_PAY_7516 = 24   [(string_value) = "7516"];
  CURRENT_LOCATION_2_POST_PAY_7517 = 25   [(string_value) = "7517"];
  CURRENT_LOCATION_2_POST_PAY_7518 = 26   [(string_value) = "7518"];
  CURRENT_LOCATION_2_POST_PAY_7519 = 27   [(string_value) = "7519"];
  CURRENT_LOCATION_2_POST_PAY_7520 = 28   [(string_value) = "7520"];
  CURRENT_LOCATION_2_POST_PAY_7521 = 29   [(string_value) = "7521"];
  CURRENT_LOCATION_2_POST_PAY_7522 = 30   [(string_value) = "7522"];
  CURRENT_LOCATION_2_POST_PAY_7523 = 31   [(string_value) = "7523"];
  CURRENT_LOCATION_2_POST_PAY_7524 = 32   [(string_value) = "7524"];
  CURRENT_LOCATION_2_POST_PAY_7525 = 33   [(string_value) = "7525"];
  CURRENT_LOCATION_2_POST_PAY_7526 = 34   [(string_value) = "7526"];
  CURRENT_LOCATION_2_POST_PAY_7527 = 35   [(string_value) = "7527"];
  CURRENT_LOCATION_2_POST_PAY_7528 = 36   [(string_value) = "7528"];
  CURRENT_LOCATION_2_POST_PAY_7529 = 37   [(string_value) = "7529"];
  CURRENT_LOCATION_2_POST_PAY_7530 = 38   [(string_value) = "7530"];
  CURRENT_LOCATION_2_POST_PAY_7531 = 39   [(string_value) = "7531"];
  CURRENT_LOCATION_2_POST_PAY_7532 = 40   [(string_value) = "7532"];
  CURRENT_LOCATION_2_POST_PAY_7533 = 41   [(string_value) = "7533"];
  CURRENT_LOCATION_2_POST_PAY_7534 = 42   [(string_value) = "7534"];
  CURRENT_LOCATION_2_POST_PAY_7535 = 43   [(string_value) = "7535"];
  CURRENT_LOCATION_2_POST_PAY_7536 = 44   [(string_value) = "7536"];
  CURRENT_LOCATION_2_POST_PAY_7537 = 45   [(string_value) = "7537"];
  CURRENT_LOCATION_2_POST_PAY_7538 = 46   [(string_value) = "7538"];
  CURRENT_LOCATION_2_POST_PAY_7539 = 47   [(string_value) = "7539"];
  CURRENT_LOCATION_2_POST_PAY_7540 = 48   [(string_value) = "7540"];
  CURRENT_LOCATION_2_POST_PAY_7541 = 49   [(string_value) = "7541"];
  CURRENT_LOCATION_2_POST_PAY_7542 = 50   [(string_value) = "7542"];
  CURRENT_LOCATION_2_POST_PAY_7543 = 51   [(string_value) = "7543"];
  CURRENT_LOCATION_2_POST_PAY_7544 = 52   [(string_value) = "7544"];
  CURRENT_LOCATION_2_POST_PAY_7545 = 53   [(string_value) = "7545"];
  CURRENT_LOCATION_2_POST_PAY_7546 = 54   [(string_value) = "7546"];
  CURRENT_LOCATION_2_POST_PAY_7547 = 55   [(string_value) = "7547"];
  CURRENT_LOCATION_2_POST_PAY_7548 = 56   [(string_value) = "7548"];
  CURRENT_LOCATION_2_POST_PAY_7549 = 57   [(string_value) = "7549"];
  CURRENT_LOCATION_2_POST_PAY_7550 = 58   [(string_value) = "7550"];
  CURRENT_LOCATION_2_POST_PAY_7551 = 59   [(string_value) = "7551"];
  CURRENT_LOCATION_2_POST_PAY_7552 = 60   [(string_value) = "7552"];
  CURRENT_LOCATION_2_POST_PAY_7553 = 61   [(string_value) = "7553"];
  CURRENT_LOCATION_2_POST_PAY_7554 = 62   [(string_value) = "7554"];
  CURRENT_LOCATION_2_POST_PAY_7555 = 63   [(string_value) = "7555"];
  CURRENT_LOCATION_2_POST_PAY_7556 = 64   [(string_value) = "7556"];
  CURRENT_LOCATION_2_POST_PAY_7557 = 65   [(string_value) = "7557"];
  CURRENT_LOCATION_2_POST_PAY_7558 = 66   [(string_value) = "7558"];
  CURRENT_LOCATION_2_POST_PAY_7559 = 67   [(string_value) = "7559"];
  CURRENT_LOCATION_2_POST_PAY_7560 = 68   [(string_value) = "7560"];
  CURRENT_LOCATION_2_POST_PAY_7561 = 69   [(string_value) = "7561"];
  CURRENT_LOCATION_2_POST_PAY_7562 = 70   [(string_value) = "7562"];
  CURRENT_LOCATION_2_POST_PAY_7563 = 71   [(string_value) = "7563"];
  CURRENT_LOCATION_2_POST_PAY_7564 = 72   [(string_value) = "7564"];
  CURRENT_LOCATION_2_POST_PAY_7565 = 73   [(string_value) = "7565"];
  CURRENT_LOCATION_2_POST_PAY_7566 = 74   [(string_value) = "7566"];
  CURRENT_LOCATION_2_POST_PAY_7567 = 75   [(string_value) = "7567"];
  CURRENT_LOCATION_2_POST_PAY_7568 = 76   [(string_value) = "7568"];
  CURRENT_LOCATION_2_POST_PAY_7569 = 77   [(string_value) = "7569"];
  CURRENT_LOCATION_2_POST_PAY_7570 = 78   [(string_value) = "7570"];
  CURRENT_LOCATION_2_POST_PAY_7571 = 79   [(string_value) = "7571"];
  CURRENT_LOCATION_2_POST_PAY_7572 = 80   [(string_value) = "7572"];
  CURRENT_LOCATION_2_POST_PAY_7573 = 81   [(string_value) = "7573"];
  CURRENT_LOCATION_2_POST_PAY_7574 = 82   [(string_value) = "7574"];
  CURRENT_LOCATION_2_POST_PAY_7575 = 83   [(string_value) = "7575"];
  CURRENT_LOCATION_2_POST_PAY_7576 = 84   [(string_value) = "7576"];
  CURRENT_LOCATION_2_POST_PAY_7577 = 85   [(string_value) = "7577"];
  CURRENT_LOCATION_2_POST_PAY_7578 = 86   [(string_value) = "7578"];
  CURRENT_LOCATION_2_POST_PAY_7579 = 87   [(string_value) = "7579"];
  CURRENT_LOCATION_2_POST_PAY_7580 = 88   [(string_value) = "7580"];
  CURRENT_LOCATION_2_POST_PAY_7581 = 89   [(string_value) = "7581"];
  CURRENT_LOCATION_2_POST_PAY_7582 = 90   [(string_value) = "7582"];
  CURRENT_LOCATION_2_POST_PAY_7583 = 91   [(string_value) = "7583"];
  CURRENT_LOCATION_2_POST_PAY_7584 = 92   [(string_value) = "7584"];
  CURRENT_LOCATION_2_POST_PAY_7585 = 93   [(string_value) = "7585"];
  CURRENT_LOCATION_2_POST_PAY_7586 = 94   [(string_value) = "7586"];
  CURRENT_LOCATION_2_POST_PAY_7587 = 95   [(string_value) = "7587"];
  CURRENT_LOCATION_2_POST_PAY_7588 = 96   [(string_value) = "7588"];
  CURRENT_LOCATION_2_POST_PAY_7589 = 97   [(string_value) = "7589"];
  CURRENT_LOCATION_2_POST_PAY_7590 = 98   [(string_value) = "7590"];
  CURRENT_LOCATION_2_POST_PAY_7591 = 99   [(string_value) = "7591"];
  CURRENT_LOCATION_2_POST_PAY_7592 = 100  [(string_value) = "7592"];
  CURRENT_LOCATION_2_POST_PAY_7593 = 101  [(string_value) = "7593"];
  CURRENT_LOCATION_2_POST_PAY_7594 = 102  [(string_value) = "7594"];
  CURRENT_LOCATION_2_POST_PAY_7595 = 103  [(string_value) = "7595"];
  CURRENT_LOCATION_2_POST_PAY_7596 = 104  [(string_value) = "7596"];
  CURRENT_LOCATION_2_POST_PAY_7597 = 105  [(string_value) = "7597"];
  CURRENT_LOCATION_2_POST_PAY_7598 = 106  [(string_value) = "7598"];
  CURRENT_LOCATION_2_POST_PAY_7599 = 107  [(string_value) = "7599"];
}
