syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

enum FissDiagnosisPresentOnAdmissionIndicator {
  DIAGNOSIS_PRESENT_ON_ADMISSION_INDICATOR_UNSET = 0;

  // ASCII N:
  //
  // No, not present at the time of inpatient admission.
  DIAGNOSIS_PRESENT_ON_ADMISSION_INDICATOR_NO = 78;

  // ASCII U:
  //
  // Unknown, the documentation is insufficient to determine if the condition was present at the time of inpatient
  // admission.
  DIAGNOSIS_PRESENT_ON_ADMISSION_INDICATOR_UNKNOWN = 85;

  // ASCII W:
  //
  // Clinically undetermined, the provider is unable to clinically determine whether the condition was present at the
  // time of inpatient admission or not.
  DIAGNOSIS_PRESENT_ON_ADMISSION_INDICATOR_CLINICALLY_UNDETERMINED = 87;

  // ASCII Y:
  //
  // Yes, Present at the time of inpatient admission.
  DIAGNOSIS_PRESENT_ON_ADMISSION_INDICATOR_YES = 89;

  // ASCII 1:
  //
  // Unreported/not used, exempt from POA reporting - This code is the equivalent code of a blank on the UB04,
  // however, it is determined that blanks are undesirable when submitting the data via the 4010A1.
  DIAGNOSIS_PRESENT_ON_ADMISSION_INDICATOR_UNREPORTED = 49;

  // ASCII <SPACE>:
  //
  // Not acute care, POA does not apply.
  DIAGNOSIS_PRESENT_ON_ADMISSION_INDICATOR_NOT_ACUTE_CARE = 32;
}
