syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

// FISS Procedure Code
message FissProcedureCode {
  // Procedure Code:
  //
  // Identifies the principal procedure (first code) and other procedures (codes two through twenty five) performed
  // during the billing period covered by the claim. This field is required for inpatient claims.
  string proc_cd = 1;

  // RDA Position:
  //
  // Indicates which position this procedure code is located in on the claim. This value is assigned by RDA.
  uint32 rda_position = 2;

  // Procedure Flag:
  //
  // Identifies a set of flags returned from the Medicare Code Editor (MCE) module to indicate claim procedure code
  // errors.
  optional string proc_flag = 16;

  // Procedure Date:
  //
  // Date the procedure was conducted.
  optional string proc_dt = 17;
}
